# langchain-agentcore-aws

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  chainlit.md  docker-compose.yml  pyproject.toml
.chainlit/: config.toml
.claude/: settings.json
.claude/rules/: agentcore.md  agents.md  chat.md  lambda.md  python.md  terraform.md
.claude/skills/add-tool/: SKILL.md
.claude/skills/aws/: SKILL.md
.claude/skills/aws-bedrock/: SKILL.md
.claude/skills/aws-bedrock-agentcore/: SKILL.md
.claude/skills/deploy-infra/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/run-agent/: SKILL.md
.claude/skills/run-chat/: SKILL.md
.claude/skills/run-runtime/: SKILL.md
.claude/skills/test/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docker/: Dockerfile  Dockerfile.chat  Dockerfile.lambda
infra/: versions.tf
infra/envs/dev/: main.tf  outputs.tf  terraform.tfvars  variables.tf
infra/modules/agentcore/: main.tf  outputs.tf  variables.tf
infra/modules/bedrock-agent/: main.tf  outputs.tf  variables.tf
infra/modules/chat/: main.tf  outputs.tf  variables.tf
infra/modules/iam/: main.tf  (+2 more)
public/: theme.css
src/agentic_ai/: __init__.py  chat.py  chat_data.py  config.py  memory.py  observability.py  runtime.py
tests/: conftest.py
tests/unit/: test_agents.py  test_chat.py  test_chat_data.py  test_lambda_handler.py  test_memory.py  test_runtime.py  test_tools.py
(+21 files in other folders)
