[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-ai-aws"
version = "0.2.0"
description = "Foundation for agentic AI workflows on AWS Bedrock"
requires-python = ">=3.11"
dependencies = [
    "langchain-aws>=1.4.1",
    "langgraph>=1.1.3",
    "deepagents>=0.4.12",
    "langchain>=0.3",
    "boto3>=1.35",
    "botocore[crt]>=1.35",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "bedrock-agentcore>=1.0",
    "langgraph-checkpoint-aws>=1.0",
]

[project.optional-dependencies]
chat = [
    "chainlit>=2.0",
    "langgraph-checkpoint-sqlite>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "boto3-stubs[bedrock,bedrock-agent,bedrock-agent-runtime,bedrock-runtime]>=1.35",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_ai"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
